@@ -3636,9 +3636,9 @@ sub handle_clean
     }
 
     # Built sources are automatically removed by maintainer-clean.
-    push (@maintainer_clean_files, '\$(BUILT_SOURCES)')
+    push (@maintainer_clean_files, '$(BUILT_SOURCES)')
 	if &variable_defined ('BUILT_SOURCES');
-    push (@maintainer_clean_files, '\$(MAINTAINERCLEANFILES)')
+    push (@maintainer_clean_files, '$(MAINTAINERCLEANFILES)')
 	if &variable_defined ('MAINTAINERCLEANFILES');
 
     $output_rules .=
