@@ -16,7 +16,7 @@
 ## Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
 ## 02111-1307, USA.
 
-?INSTALL_MAN?_am_installdirs += $(DESTDIR)$(man%SECTION%dir)
+?INSTALL-MAN?_am_installdirs += $(DESTDIR)$(man%SECTION%dir)
 .PHONY install-man: install-man%SECTION%
 install-man%SECTION%: $(man%SECTION%_MANS) $(man_MANS)
 	@$(NORMAL_INSTALL)
