@@ -1,5 +1,11 @@
 2001-02-27  Akim Demaille  <akim@epita.fr>
 
+	* mans.am: s/INSTALL_MAN/INSTALL-MAN/.
+	* automake.in (&handle_clean): Don't escape what's given to
+	&transform.
+
+2001-02-27  Akim Demaille  <akim@epita.fr>
+
 	Distinguish automake substitutions from config.status
 	substitutions.
 
